gc hasee